<resources>
    <string name="app_name">RudrakshApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="menu_one">What is Rudraksh ?</string>
    <string name="menu_two">Know Your Rudraksh</string>
    <string name="menu_three">Various Mukhis</string>
    <string name="menu_four">Combinations</string>
    <string name="menu_five">Buy Rudraksh</string>
    <string name="menu_six">Rudraksh Tips</string>
    <string name="nill"> </string>
    <string name="myth_text">Mythological Introduction about Rudraksh</string>
    <string name="chemical_heading">Chemical Properties</string>
    <string name="electrical_heading">Electrical Properties</string>
    <string name="magnetic_heading">Magnetic Properties</string>
    <string name="chemical_text">
      The Rudraksha beads are mainly natural seed product that contain Carbon, Hydrogen, Oxygen, Nitrogen and different  elements in a combined form. The gaseous elements in the following proportion :\n\n
      Carbon	\t\t50.024 \n
      Hydrogen	\t\t17.798 \n
      Nitrogen	\t\t0.9461 \n
      Oxygen	\t\t30.4531 \n\n
      The following elements are also present albeit in less quantities :\n\n
      Aluminum, Calcium, Chlorine, Copper, Cobalt, Nickel, Iron, Magnesium, Manganese, Phosphorous, Potassium, Sodium, Silicon Oxide and Zinc.\n\n
      The beneficial powers of Rudraksha are by virtue of its Electrical and Magnetic Properties. Rudraksha beads act as a Stabilizing Anchor. Rudraksha beads electrical properties are : Resistance, Capacitance or the Dielectric Properties, Inductance. Rudraksha has the ability to Change its polarity.\n\n

  </string>
    <string name="one_mukhi">1 Mukhi</string>
    <string name="two_mukhi">2 Mukhi</string>
    <string name="three_mukhi">3 Mukhi</string>
    <string name="four_mukhi">4 Mukhi</string>
    <string name="five_mukhi">5 Mukhi</string>
    <string name="six_mukhi">6 Mukhi</string>
    <string name="seven_mukhi">7 Mukhi</string>
    <string name="eight_mukhi">8 Mukhi</string>
    <string name="nine_mukhi">9 Mukhi</string>
    <string name="ten_mukhi">10 Mukhi</string>
    <string name="eleven_mukhi">11 Mukhi</string>
    <string name="twelve_mukhi">12 Mukhi</string>
    <string name="thirteen_mukhi">13 Mukhi</string>
    <string name="fourteen_mukhi">14 Mukhi</string>
    <string name="fifteen_mukhi">Gauri Shankar</string>
    <string name="description_title">Description</string>
    <string name="mercury">Mercury</string>
    <string name="venus">Venus</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="jupiter">Jupiter</string>
    <string name="saturn">Saturn</string>
    <string name="moon">Moon</string>
    <string name="sun">Sun</string>
    <string name="ruling_planet">Ruling Planet:</string>
    <string name="electrical_text">
       The ability to send out subtle electrical impulses and inductive vibrations and as in a capacitor to store electrical energy.\n\n
       In the modern age, with intense competition, the stress levels have increased tremendously. Almost every individual has problems of stress and stress-related ailments like insomnia, alcoholism, depression, maladjustments, heart diseases, skin diseases etc. Doctors can confirm that almost 95% of the ailments are psychosomatic or stress related, i.e. originating from the Mind. When there is stress or maladjustment, corresponding stress signals are sent to the Central Nervous system, there is an increased activity or abnormality of Neurons and Neurotransmitters. The magnitude of change will depend on the cause and specific case. When such a thing occurs and it occurs continuously, streamlined flow of electrical signals throughout the Mind-Body interface is disrupted and it makes us feel uncomfortable, and we are not able to act with our full efficiency. Our Blood circulation becomes non-ideal and we experience various illnesses. Unfortunately, this happens all the time.\n\n
        Rudraksha Beads, have for thousands of year, been known to act as a Stabilizing Anchor, and the effects have been described in the Ancient Vedic texts. Rudraksha Bead\'s electrical property can be broadly categorized into :\n\n

1) RESISTANCE :- There is continuous and subtle flow of bio-electrical signal throughout the body due to potential difference between parts of the body. Rudraksha Beads of particular Mukhis or Facets have a definitive Factor of Resistance. It is measured in Ohms. When these beads resist the flow of bio-electrical impulses, a specific ampere of current flow is generated depending on the factor of resistance. This acts in tandem with the heartbeat, streamlining it and sending out specific impulses to the brain. These impulses stimulate certain positive brain chemicals. Making us feel better, more confident, poised and more energetic. It has been observed that specific Mukhis or Facets of Rudraksha Beads send out specific signals, acting on a particular brain chemical and thereby effecting specific positive changes in personality. It is well proven that our state of mind and our personality is governed almost completely by the Brain,and  its functioning and that of Central Nervous System.\n\n

2) CAPACITANCE OR THE DIELECTRIC PROPERTIES :- Rudraksha  act as dielectric, i.e. as a storage of electrical energy. This property of Rudraksha makes it capable in stabilizing and anchor the bio-electric current. The values are measured in units of Farad. This property is very helpful in controlling hyperactivity, palpitations of the heart, streamlining heartbeat etc. Due to stress, when there is increased physical activity, the heart beats faster and the overall activity of hormones and the nervous system increases. This causes increased energy levels or increase in potential difference. As a result of this, the magnitude of the bio-electric current increases. Rudraksha Beads, acting as Dielectric, storeing this excess bio-electric energy, thereby streamlining the overall activity to normalcy.\n\n
   3) INDUCTANCE :- in Rudraksha Beads have permanent magnetic properties. it is  observed that it send out inductive vibrations. its frequencies is measured in units of Henry (Volt Seconds/Ampere).  \n\n
   </string>
    <string name="select_zodiac">Select your Zodiac Sign:</string>
    <string name="magnetic_text">
        Rudraksha  are both Para-magnetic and Diamagnetic, with the most important property of Dynamic Polarity. We all are  aware of the beneficial healing properties of magnets. Magnetic Healing is becoming extremely popular of late and everyone who have been using magnets for healing have been getting the benefits and have found overall betterment and rejuvenation. Rudraksha Beads retain most of the properties of magnets but they are unparallel in one aspect - it have ability to change their polarity or the Property of Dynamic Polarity. The basic way of healing is based on the fact that when the passage of arteries and veins which carry blood  from the heart to all the parts of the body is block.  or reduced due to a variety of reasons, . Blood carries oxygen and energy to various parts of the body and cleanses it off waste materials in the vains and body. Any disruption of the  flow of blood circulation is may bound to cause illnesses.\n\n

We experience pain and uneasiness due to improper blood circulation. Every cell in the blood as well as the arteries and veins is charged either positively or negatively. \n\n

there are two poles present in the magnet, Positive (+) and Negative (-).\n\n

When magnets are passed on various parts of the body, the opposite pole of the magnets and that of the cells get attracted and there is an expansion of the passage. The arteries and veins open up to facilitate streamlined blood circulation. When there is a streamlining of blood circulation, most of the illnesses get automatically cured and we feel better.\n\n

But with magnets the polarity is definate. When magnets are brought near a particular part of the body, they open up only those sections of veins and arteries where there is a matching of polarities, hence complete healing and streamlining of blood circulation cannot be perfact. We experience healing and feel better but we can still go much further with Dynamic Polarity of Rudraksha Beads.\n\n

Rudraksha has the ability to change its polarityThis in turn is by virtue of its property, Dia-magnetism.
Diamagnetism is termed as the ability of any material to acquire temporary magnetic property in presence of an external magnetic field. The polarity of the charge induced is opposite to that of the external field inducing the charge. Blood circulation and heartbeat automatically induces a magnetic field around the body and particularly the heart region. Bioelectricity automatically gives rise to diamagnetism, depending on the polarity of the induced magnetic field. Rudraksha Bead acquire a polarity that is the opposite of the inducing field. As a result of this, the opening up of the passages of arteries and veins is far better than that of magnets. it is Much better for healing and rejuvenation.\n\n
    </string>
    <string name="man_one">Om Hreem Namha</string>
    <string name="man_two">Om Namha</string>
    <string name="man_three">Om kleem Namah</string>
    <string name="man_four">Om Hreem Namah</string>
    <string name="man_five">Om Hreem Namaha</string>
    <string name="man_six">Om Hreem Hoom Namah</string>
    <string name="man_seven">Om Hoom Namahh</string>
    <string name="man_eight">Om Hoom Namah</string>
    <string name="man_nine">Om Hreeem Hoom Namah</string>
    <string name="man_ten">Om Hreem Namaha</string>
    <string name="man_eleven">Om Hreem Hoom Namaha</string>
    <string name="man_twelve">Om Kraum Sraum Raum Namaha</string>
    <string name="man_thirteen">Om Hreem Namaha</string>
    <string name="man_fourteen">Om Namaha</string>
    <string name="man_fifteen">Om Gauri shunkraaye Namaha</string>
    <string name="man_ek">ओम ह्रीम नमः</string>
    <string name="man_do">ओम नमः</string>
    <string name="man_teen">ओम क्लीम नामः</string>
    <string name="man_chaar">ओम ह्रीम नमः</string>
    <string name="man_panch">ओम ह्रीम नमः</string>
    <string name="man_she">ओम ह्रीम हूम नमः</string>
    <string name="man_saat">ओम हूम नमः</string>
    <string name="man_aath">ओम हूम नमः</string>
    <string name="man_nau">ओम ह्रीम हूम नमः</string>
    <string name="man_das">ओम ह्रीम नमः</string>
    <string name="man_gyara">ओम ह्रीम हूम नमः</string>
    <string name="man_baarah">ओम क्रौम स्राओम रौम नमः</string>
    <string name="man_tehra">ओम ह्रीम नमः</string>
    <string name="man_chauda">ओम नमः</string>
    <string name="man_pandra">ओम गौरी शंकरार्य नमः</string>
    <string name="myth">Mythological</string>
    <string name="sci">Scientific</string>
    <string name="description_one">This type of Rudraksha symbolizes Lord Shiva himself. Generally it comes in the shape of cashew nut or half moon. This is the supreme Rudraksha for anyone who want to enjoy all the worldly blessings as well as get devoted to the supreme power. A person wearing this rudraksha becomes Fearless and no amount of negative powers or enmity can affect him. The power of concentration increases, all his sins are destroyed and a feeling of contentment and happiness comes along with Spirituality. The wearer of this Rudraksha begins to feel a different from worldly affairs and his inclination towards the supreme power . This is the only Rudraksha that provides Health, Wealth and Happiness in true sense as it also enhances the Spiritual Growth of the wearer.</string>
    <string name="recommended_rudra">Recommended Rudraksh for you :</string>
</resources>