<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:scrollbars="none">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">
           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               app:cardCornerRadius="10dp"
               android:layout_margin="10dp"
               android:id="@+id/card_one"
               android:elevation="20dp"
               android:layout_height="wrap_content">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="10dp"
                       android:gravity="center_horizontal"
                       android:textSize="20sp"
                       android:layout_marginBottom="10dp"
                       android:text="@string/chemical_heading"/>
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_margin="10dp"
                       android:layout_marginTop="20dp"
                       android:id="@+id/chemical_text"
                       android:layout_height="wrap_content"
                       android:text="@string/chemical_text"/>

               </LinearLayout>

           </android.support.v7.widget.CardView>
           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               app:cardCornerRadius="10dp"
               android:layout_marginTop="20dp"
               android:layout_margin="10dp"
               android:id="@+id/card_two"
               android:elevation="20dp"
               android:layout_height="wrap_content">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:gravity="center_horizontal"
                       android:layout_marginTop="10dp"
                       android:textSize="20sp"
                       android:layout_marginBottom="10dp"
                       android:text="@string/electrical_heading"/>
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_margin="10dp"
                       android:layout_marginTop="20dp"
                       android:id="@+id/text_electrical"
                       android:layout_height="wrap_content"
                       android:text="@string/electrical_text"/>

               </LinearLayout>

           </android.support.v7.widget.CardView>
           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               app:cardCornerRadius="10dp"
               android:layout_margin="10dp"
               android:elevation="20dp"
               android:id="@+id/card_three"
               android:layout_marginTop="20dp"
               android:layout_height="wrap_content">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:gravity="center_horizontal"
                       android:layout_marginTop="10dp"
                       android:layout_marginBottom="10dp"
                       android:textSize="20sp"
                       android:text="@string/magnetic_heading"/>
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_margin="10dp"
                       android:layout_marginTop="20dp"
                       android:id="@+id/text_magnetic"
                       android:layout_height="wrap_content"
                       android:text="@string/magnetic_text"/>

               </LinearLayout>

           </android.support.v7.widget.CardView>
       </LinearLayout>
   </ScrollView>

</LinearLayout>